# ML_sys_practice

./: .gitignore  README.md  pyproject.toml  requirements.txt
.ipynb_checkpoints/: README-checkpoint.md
BASIC_ML/: jax.ipynb  pyspark.ipynb
BASIC_ML/.ipynb_checkpoints/: jax-checkpoint.ipynb
Computer_Vision/: README.md
NLP/: README.MD
Structured_Data/: README.md
Structured_Data/Docker/: Dockerfile
Structured_Data/Experiment/notebook/.ipynb_checkpoints/: nb-checkpoint.ipynb
Structured_Data/src/configs/: settings.yaml
Stucture/: README.md
Stucture/Docker/: Dockerfile.base
Stucture/src/configs/: data_validation.yaml  hyperparameter_tuning.yaml
Stucture/src/utils/: __init__.py
