[tool.poetry]
name = "ml-sys-practice"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.27.1"
numpy = "^1.26.2"
pandas = "^2.1.4"
scikit-learn = "^1.3.2"
matplotlib = "^3.8.2"
seaborn = "^0.13.0"
shap = "^0.44.0"
torch = "^2.1.2"
torchvision = "^0.16.2"
torchaudio = "^2.1.2"
fastapi = "^0.105.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
