[tool.poetry]
name = "ml-sys-practice"
version = "0.1.0"
description = ""
authors = ["FiLM <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.27.1"
numpy = "^1.26.2"
pandas = "^2.1.4"
scikit-learn = "^1.3.2"
matplotlib = "^3.8.2"
seaborn = "^0.13.0"
shap = "^0.44.0"
torch = "^2.1.2"
torchvision = "^0.16.2"
torchaudio = "^2.1.2"
fastapi = "^0.105.0"
notebook = "^7.0.6"
nltk = "^3.8.1"
openml = "^0.14.1"
ipywidgets = "^8.1.1"
lightning = "^2.1.3"
gradio = "^4.12.0"
transformers = "^4.36.2"
jax = {extras = ["cpu"], version = "^0.4.23"}
tqdm = "^4.66.1"
pyspark = "^3.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
